package com.example.myarena.domain;

public enum ReservationStatus {
    Pending,
    Confirmed,
    Cancelled,
    Completed
}
